--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@ nav img{
 nav{
     background-color: #8ace00;
 }
-main, footer{
+main{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 h1,h2{
